# python_example

./: .appveyor.yml  .clang-format  .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  .travis.yml  README.md  pyproject.toml  setup.py
.github/workflows/: conda.yml  pip.yml  wheels.yml
code/: bindings.cpp  serial_communicator.cpp  serial_communicator.hpp
conda.recipe/: meta.yaml
docs/: .gitignore  conf.py  index.rst  make.bat  python_example.rst
python/: test.py
src/: main.cpp
tests/: test.py
